--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,8 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "no-unused-vars": "error",
-    //  "no-console":"error",
-    //  "no-undef":"error",
+     "no-console":"error",
+     "no-undef":"error",
     "no-unused-expressions": "error",
     "no-unreachable": "error"
   }
