--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-HOMEPRODUCT = 'https://start-tech-server.vercel.app/api/v1/product/?page=1&limit=4'
-PRODUCTS = "https://start-tech-server.vercel.app/api/v1/product/"
+HOMEPRODUCT = 'https://assignment-3-8p6flgq4f-mr7aali.vercel.app/api/v1/product?page=1&limit=4'
+PRODUCTS = https://assignment-3-8p6flgq4f-mr7aali.vercel.app/api/v1/product
